deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-demo
spec:
  selector:
    matchLabels:
      app: flask-demo
  template:
    metadata:
      labels:
        app: flask-demo
    spec:
      containers:
      - name: myapp1
        image: docker74135/flask-demo:latest
        ports:
        - containerPort: 80
